@@ -8,7 +8,7 @@
       enableCompletion = lib.mkDefault true;
       syntaxHighlighting.enable = lib.mkDefault true;
       autosuggestions.enable = lib.mkDefault true;
-      shellAliases = import ../../../templates/shell-aliases.nix { inherit lib config; };
+      shellAliases = import ../../../mixins/shell-aliases.nix { inherit lib config; };
 
       promptInit = ''
         setopt autocd
